[gd_scene load_steps=12 format=3 uid="uid://dk4e27wwmd71y"]

[ext_resource type="Script" path="res://src/gecko/gecko.gd" id="1_nqmut"]
[ext_resource type="Script" path="res://src/gecko/custom_platform_controller.gd" id="2_nqcvy"]
[ext_resource type="Script" path="res://addons/xsm/state.gd" id="3_8wexd"]
[ext_resource type="Script" path="res://src/gecko/xsm/xsm_char_can_move.gd" id="4_8e480"]
[ext_resource type="Script" path="res://src/gecko/xsm/xsm_char.gd" id="5_3kalm"]
[ext_resource type="Script" path="res://src/gecko/xsm/xsm_char_land.gd" id="6_bvkfd"]
[ext_resource type="Script" path="res://addons/xsm/state_animation.gd" id="6_efsnn"]
[ext_resource type="Script" path="res://src/gecko/xsm/xsm_char_climb.gd" id="8_nng3l"]

[sub_resource type="Animation" id="Animation_yau28"]
resource_name = "idle"

[sub_resource type="Animation" id="Animation_sbpqp"]
resource_name = "land"
length = 0.02

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3vw23"]
_data = {
"idle": SubResource("Animation_yau28"),
"land": SubResource("Animation_sbpqp")
}

[node name="Gecko" type="CharacterBody2D"]
script = ExtResource("1_nqmut")

[node name="Controller" type="Node2D" parent="."]
script = ExtResource("2_nqcvy")
can_hold_jump = true

[node name="xsm" type="Node" parent="."]
script = ExtResource("3_8wexd")
history_size = 0
disabled = false
debug_mode = true
target_path = NodePath("..")
timed = false
next_state = NodePath("can_dash/can_attack/can_move/idle")

[node name="can_dash" type="Node" parent="xsm"]
script = ExtResource("3_8wexd")
disabled = false
debug_mode = false
target_path = NodePath("../..")
timed = false
next_state = NodePath("can_attack/can_move/idle")

[node name="can_attack" type="Node" parent="xsm/can_dash"]
script = ExtResource("3_8wexd")
disabled = false
debug_mode = false
target_path = NodePath("../../..")
timed = false
next_state = NodePath("can_move/idle")

[node name="can_move" type="Node" parent="xsm/can_dash/can_attack"]
script = ExtResource("4_8e480")
animation_player = NodePath("../../../../AnimationPlayer")
anim_on_enter = ""
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("idle")

[node name="idle" type="Node" parent="xsm/can_dash/can_attack/can_move"]
script = ExtResource("5_3kalm")
animation_player = NodePath("../../../../../AnimationPlayer")
anim_on_enter = "idle"
loop_mode = 0
on_finished = 1
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath(".")

[node name="jump" type="Node" parent="xsm/can_dash/can_attack/can_move"]
script = ExtResource("5_3kalm")
animation_player = NodePath("../../../../../AnimationPlayer")
anim_on_enter = ""
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../idle")

[node name="move" type="Node" parent="xsm/can_dash/can_attack/can_move"]
script = ExtResource("5_3kalm")
animation_player = NodePath("../../../../../AnimationPlayer")
anim_on_enter = ""
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../idle")

[node name="fall" type="Node" parent="xsm/can_dash/can_attack/can_move"]
script = ExtResource("5_3kalm")
animation_player = NodePath("../../../../../AnimationPlayer")
anim_on_enter = "fall"
loop_mode = 0
on_finished = 1
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../idle")

[node name="land" type="Node" parent="xsm/can_dash/can_attack"]
script = ExtResource("6_bvkfd")
animation_player = NodePath("../../../../AnimationPlayer")
anim_on_enter = "land"
loop_mode = 0
on_finished = 1
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../can_move/idle")

[node name="dash" type="Node" parent="xsm/can_dash"]
script = ExtResource("6_efsnn")
animation_player = NodePath("../../../AnimationPlayer")
anim_on_enter = ""
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../can_attack")

[node name="hurt" type="Node" parent="xsm/can_dash"]
script = ExtResource("6_efsnn")
animation_player = NodePath("../../../AnimationPlayer")
anim_on_enter = ""
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../can_attack")

[node name="climb" type="Node" parent="xsm/can_dash"]
script = ExtResource("8_nng3l")
animation_player = NodePath("../../../AnimationPlayer")
anim_on_enter = ""
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../can_attack")

[node name="wall_jump" type="Node" parent="xsm/can_dash"]
script = ExtResource("6_efsnn")
animation_player = NodePath("../../../AnimationPlayer")
anim_on_enter = ""
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../can_attack")

[node name="death" type="Node" parent="xsm/can_dash"]
script = ExtResource("6_efsnn")
animation_player = NodePath("../../../AnimationPlayer")
anim_on_enter = ""
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../can_attack")

[node name="attack" type="Node" parent="xsm/can_dash"]
script = ExtResource("6_efsnn")
animation_player = NodePath("../../../AnimationPlayer")
anim_on_enter = ""
disabled = false
debug_mode = false
target_path = NodePath("")
timed = false
next_state = NodePath("../can_attack")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3vw23")
}

[connection signal="attached_to_wall" from="Controller" to="." method="_on_controller_attached_to_wall"]
[connection signal="dettached_to_wall" from="Controller" to="." method="_on_controller_dettached_to_wall"]
[connection signal="hit_ground" from="Controller" to="." method="_on_controller_hit_ground"]
[connection signal="jumped" from="Controller" to="." method="_on_controller_jumped"]
[connection signal="started_falling" from="Controller" to="." method="_on_controller_started_falling"]
[connection signal="started_moving" from="Controller" to="." method="_on_controller_started_moving"]
[connection signal="stopped" from="Controller" to="." method="_on_controller_stopped"]
